// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`uni-app-x > tailwindcss3 index.uvue.ts case 1 > css 1`] = `
"::before,::after {
    --tw-content: ""}
view,text,::before,::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgba(59, 130, 246, 0.5);
    --tw-ring-offset-shadow: 0 0 rgba(0,0,0,0);
    --tw-ring-shadow: 0 0 rgba(0,0,0,0);
    --tw-shadow: 0 0 rgba(0,0,0,0);
    --tw-shadow-colored: 0 0 rgba(0,0,0,0);
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
;
    box-sizing: border-box;
    border-width: 0;
    border-style: solid;
    border-color: currentColor}
::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgba(59, 130, 246, 0.5);
    --tw-ring-offset-shadow: 0 0 rgba(0,0,0,0);
    --tw-ring-shadow: 0 0 rgba(0,0,0,0);
    --tw-shadow: 0 0 rgba(0,0,0,0);
    --tw-shadow-colored: 0 0 rgba(0,0,0,0);
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
    --tw-contain-size:  ;
    --tw-contain-layout:  ;
    --tw-contain-paint:  ;
    --tw-contain-style:  
}
.mt-_32d43rpx_ {
    margin-top: 32.43rpx
}
.bg-_h322323_ {
    --tw-bg-opacity: 1;
    background-color: rgba(50, 35, 35, var(--tw-bg-opacity, 1))
}
.px-4 {
    padding-left: 1rem;
    padding-right: 1rem
}
.text-_h844343_ {
    --tw-text-opacity: 1;
    color: rgba(132, 67, 67, var(--tw-text-opacity, 1))
}
"
`;

exports[`uni-app-x > tailwindcss3 index.uvue.ts case 1 1`] = `
"
	const __sfc__ = defineComponent({
		data() {
			return {
				title: 'Hello'
			}
		},
		onLoad() {

		},
		methods: {

		}
	})

export default __sfc__
function GenPagesIndexIndexRender(this: InstanceType<typeof __sfc__>): any | null {
const _ctx = this
const _cache = this.$.renderCache
  return _cE("view", _uM({ class: "px-4" }), [
    _cE("view", _uM({ class: "mt-_32d43rpx_ bg-_h322323_" }), [
      _cE("text", _uM({ class: "text-_h844343_" }), _tD(_ctx.title), 1 /* TEXT */)
    ]),
    _cE("text", _uM({ class: "icebreaker" }), "icebreaker")
  ])
}
const GenPagesIndexIndexStyles = [_uM([["icebreaker", _pS(_uM([["color", "#844343"]]))]])]
"
`;

exports[`uni-app-x > uvue.ts case 0 1`] = `
"
const __sfc__ = defineComponent({
  data() {
    return {
      title: 'Hello'
    }
  },
  onLoad() {

  },
  methods: {

  }
})

export default __sfc__
function GenPagesIndexIndexRender(this: InstanceType<typeof __sfc__>): any | null {
const _ctx = this
const _cache = this.$.renderCache
return createElementVNode("view", utsMapOf({ class: "px-4" }), [
  createElementVNode("view", utsMapOf({ class: "mt-_32d43rpx_ bg-_h322323_" }), [
    createElementVNode("text", utsMapOf({ class: "text-_h844343_" }), toDisplayString(_ctx.title), 1 /* TEXT */)
  ]),
  createElementVNode("text", utsMapOf({ class: "icebreaker" }), "icebreaker")
])
}
const GenPagesIndexIndexStyles = [utsMapOf([["icebreaker", padStyleMapOf(utsMapOf([["color", "#844343"]]))]])]
"
`;

exports[`uni-app-x > uvue.ts case 1 > css 1`] = `
"/*! tailwindcss v4.1.4 | MIT License | https://tailwindcss.com */
page,:host {
  --spacing: .25rem;
}
.mt-_32d43rpx_ {
  margin-top: 32.43rpx;
}
.bg-_h322323_ {
  background-color: #322323;
}
.px-4 {
  padding-left: calc(var(--spacing) * 4);
  padding-right: calc(var(--spacing) * 4);
}
.text-_h844343_ {
  color: #844343;
}
"
`;

exports[`uni-app-x > uvue.ts case 1 1`] = `
"
const __sfc__ = defineComponent({
  data() {
    return {
      title: 'Hello'
    }
  },
  onLoad() {

  },
  methods: {

  }
})

export default __sfc__
function GenPagesIndexIndexRender(this: InstanceType<typeof __sfc__>): any | null {
const _ctx = this
const _cache = this.$.renderCache
return createElementVNode("view", utsMapOf({ class: "px-4" }), [
  createElementVNode("view", utsMapOf({ class: "mt-_32d43rpx_ bg-_h322323_" }), [
    createElementVNode("text", utsMapOf({ class: "text-_h844343_" }), toDisplayString(_ctx.title), 1 /* TEXT */)
  ]),
  createElementVNode("text", utsMapOf({ class: "icebreaker" }), "icebreaker")
])
}
const GenPagesIndexIndexStyles = [utsMapOf([["icebreaker", padStyleMapOf(utsMapOf([["color", "#844343"]]))]])]
"
`;
